--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ footer {
 
 .intro {
     max-width: 1000px;
-    text-align: left;
+    text-align: centered;
 }
 
 .border-radius {
@@ -50,7 +50,7 @@ h2 {
 }
 
 .navbar {
-    display: flex;
+    display: inline;
     background-color: #2c190600;
     justify-content: center
 }
@@ -58,4 +58,10 @@ h2 {
 main {
     align-items: center;
     display: block;
+}
+
+.body-picture {
+    background-image: url("Pictures/0004-Mily-Airbnb-Experiences12032019.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
